# xbti-maker

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  main.py
app/api/: routes.py
app/core/: config.py  database.py
app/repositories/: project_repo.py
app/schemas/: brief.py  scoring.py  test_config.py  validation.py
app/services/: ark_generation.py  export_service.py  generation_service.py  local_generation.py  scoring_service.py  validation_service.py
app/static/css/: app.css  exported.css
app/static/js/: exported_runtime.js  generation_stream.js
app/templates/: base.html
app/templates/exported/: standalone.html
app/templates/exports/: export.html
app/templates/preview/: preview.html
app/templates/projects/: editor.html  index.html  new.html
app/web/: form_utils.py  routes.py
docs/: ark_streaming_integration.md  xbti_mvp_requirements_architecture.md  xbti_product_design.md
tests/fixtures/: sample_config.json
tests/unit/: test_export_service.py  test_generation_service.py  test_scoring_service.py  test_validation_service.py
